packages/rust/crates/xiuxian-wendao/tests/snapshots/repo_intelligence/repo_overview_managed_clone.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
expression: value
---
{
  "diagnostics": [],
  "docs": [
    {
      "doc_id": "repo:managed:doc:README.md",
      "format": "md",
      "path": "README.md",
      "repo_id": "managed",
      "title": "README.md"
    },
    {
      "doc_id": "repo:managed:doc:docs/guide.md",
      "format": "md",
      "path": "docs/guide.md",
      "repo_id": "managed",
      "title": "guide"
    },
    {
      "doc_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:Problem",
      "format": "julia_docstring",
      "path": "src/ManagedPkg.jl#symbol:Problem",
      "repo_id": "managed",
      "title": "Problem"
    },
    {
      "doc_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:solve",
      "format": "julia_docstring",
      "path": "src/ManagedPkg.jl#symbol:solve",
      "repo_id": "managed",
      "title": "solve"
    }
  ],
  "examples": [
    {
      "example_id": "repo:managed:example:examples/basic.jl",
      "path": "examples/basic.jl",
      "repo_id": "managed",
      "summary": null,
      "title": "basic"
    },
    {
      "example_id": "repo:managed:example:test/runtests.jl",
      "path": "test/runtests.jl",
      "repo_id": "managed",
      "summary": null,
      "title": "runtests"
    }
  ],
  "modules": [
    {
      "module_id": "repo:managed:module:ManagedPkg",
      "path": "src/ManagedPkg.jl",
      "qualified_name": "ManagedPkg",
      "repo_id": "managed"
    }
  ],
  "relations": [
    {
      "kind": "uses",
      "repo_id": "managed",
      "source_id": "repo:managed:module:ManagedPkg",
      "target_id": "external:LinearAlgebra"
    },
    {
      "kind": "uses",
      "repo_id": "managed",
      "source_id": "repo:managed:module:ManagedPkg",
      "target_id": "external:SciMLBase"
    },
    {
      "kind": "documents",
      "repo_id": "managed",
      "source_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:Problem",
      "target_id": "repo:managed:symbol:ManagedPkg.Problem"
    },
    {
      "kind": "documents",
      "repo_id": "managed",
      "source_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:solve",
      "target_id": "repo:managed:symbol:ManagedPkg.solve"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:module:ManagedPkg"
    },
    {
      "kind": "declares",
      "repo_id": "managed",
      "source_id": "repo:managed:module:ManagedPkg",
      "target_id": "repo:managed:symbol:ManagedPkg.Problem"
    },
    {
      "kind": "declares",
      "repo_id": "managed",
      "source_id": "repo:managed:module:ManagedPkg",
      "target_id": "repo:managed:symbol:ManagedPkg.solve"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:example:examples/basic.jl"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:example:test/runtests.jl"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:doc:README.md"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:doc:docs/guide.md"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:Problem"
    },
    {
      "kind": "contains",
      "repo_id": "managed",
      "source_id": "repo:managed",
      "target_id": "repo:managed:doc:src/ManagedPkg.jl#symbol:solve"
    },
    {
      "kind": "documents",
      "repo_id": "managed",
      "source_id": "repo:managed:doc:README.md",
      "target_id": "repo:managed:module:ManagedPkg"
    }
  ],
  "repository": {
    "dependencies": [
      "LinearAlgebra",
      "SciMLBase"
    ],
    "name": "ManagedPkg",
    "path": "[repo-root]",
    "repo_id": "managed",
    "revision": "6eb5a36800774f6ab79e8b33656ca42e17f6fe11",
    "url": "[repo-url]",
    "uuid": "12345678-1234-1234-1234-123456789abc",
    "version": "0.1.0"
  },
  "symbols": [
    {
      "audit_status": "unreviewed",
      "kind": "type",
      "module_id": "repo:managed:module:ManagedPkg",
      "name": "Problem",
      "path": "src/ManagedPkg.jl",
      "qualified_name": "ManagedPkg.Problem",
      "repo_id": "managed",
      "signature": null,
      "symbol_id": "repo:managed:symbol:ManagedPkg.Problem"
    },
    {
      "audit_status": "unreviewed",
      "kind": "function",
      "module_id": "repo:managed:module:ManagedPkg",
      "name": "solve",
      "path": "src/ManagedPkg.jl",
      "qualified_name": "ManagedPkg.solve",
      "repo_id": "managed",
      "signature": "solve(problem::Problem)",
      "symbol_id": "repo:managed:symbol:ManagedPkg.solve"
    }
  ]
}
